# todo_list

./: .coveragerc  .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-vm.yml  docker-compose.yml  pyproject.toml
.github/workflows/: merge_develop.yml  push_develop.yml
alembic/: env.py
alembic/versions/: 2025_07_18_1250-0d02b4a2cfe9_1_init_migration_add_tasks_table.py  2025_07_19_0741-2dbead1d7ecf_2_add_time_co_complete_to_tasks.py
src/: .env.example  .env.test  api_constants.py  base_schemas.py  config.py  dao.py  database.py  dependencies.py  exceptions.py  main.py
src/tasks/: dao.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: conftest.py  tasks_router_test.py
