[project]
name = "todo-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "coverage>=7.9.2",
    "faker>=37.4.2",
    "pytest==7.2.1",
    "pytest-asyncio==0.20.3",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
    "tzdata>=2025.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/integration"]
addopts = [
    "--import-mode=importlib"
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.per-file-ignores]
"env.py" = ["F401", "F811"]
